# teenygame

./: Cargo.toml  README.md
examples/: snake.rs
examples/bullet-hell/: Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
examples/bullet-hell-perf-test/: .gitignore  Cargo.toml  README.md
examples/bullet-hell-perf-test/src/: main.rs
examples/bullet-hell/src/: game.rs  lib.rs  main.rs
examples/snake/: .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml
examples/snake/src/: game.rs  main.rs
macro/: Cargo.toml
macro/src/: lib.rs
src/: asset.rs  audio.rs  file.rs  futures.rs  gfx.rs  graphics.rs  image.rs  input.rs  lib.rs  marker.rs  math.rs  resource.rs  time.rs
src/asset/: audio.rs  font.rs  image.rs  native.rs  raw.rs  web.rs
src/asset/image/: native.rs  web.rs
src/asset/raw/: native.rs  web.rs
src/file/: native.rs  web.rs
src/gfx/: drawing.rs  ninepatch.rs
src/graphics/: canvas.rs  ninepatch.rs
src/marker/: native.rs  web.rs
src/resource/: native.rs  web.rs
