[package]
name = "teenygame"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["tokio", "audio"]
tokio = ["dep:tokio"]
audio = ["dep:kira"]

[dependencies]
anyhow = "1"
winit = "0.30"
log = "0.4"
femtovg = "0.9.2"
futures = "0.3.30"
thiserror = "1"
serde = "1"
bytemuck = "1.18"
kira = { version = "0.9.5", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.43"
wasm-logger = "0.2.0"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "HtmlImageElement",
] }
web-time = "1.1.0"
gloo-net = { version = "0.6", features = ["http"] }
gloo-file = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "fs"], optional = true }
glutin = "0.32.1"
glutin-winit = "0.5.0"
raw-window-handle = "0.6.0"
image = "0.25.2"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.34"
