[package]
name = "teenygame"
description = "A real simple multiplatform game framework for Rust"
version = "0.2.0"
edition = "2021"
license = "LGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["audio", "smol", "image"]
tokio = ["dep:tokio"]
audio = ["dep:kira"]
smol = ["dep:smol"]
image = ["dep:image"]

[dependencies]
winit = "0.30"
log = "0.4"
futures = "0.3.30"
thiserror = "1"
serde = "1"
kira = { version = "0.9.5", optional = true }
wgpu = { version = "22.1.0", features = ["webgl"] }
canvasette = "0.12.0"
imgref = "1.11.0"
rgb = "0.8.50"
bytemuck = "1.19.0"
glam = "0.29.0"
image = { version = "0.25.2", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.43"
wasm-logger = "0.2.0"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
] }
web-time = "1.1.0"
gloo-net = { version = "0.6", features = ["http"] }
gloo-file = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "fs"], optional = true }
smol = { version = "2.0.2", optional = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.34"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
targets = [
    "x86_64-pc-windows-msvc",
    "i686-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
    "wasm32-unknown-unknown",
]

[workspace]
members = ["examples/bullet-hell", "examples/snake"]
