[package]
name = "bullet-hell"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
teenygame = { path = "../.." }
rand = "0.8.5"
glam = "0.29.0"
soa-rs = "0.7.2"
image = { version = "0.25.2", default-features = false, features = ["png"] }
rgb = "0.8.50"
coolor = "1.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.84"
getrandom = { version = "*", features = ["js"] }

[package.metadata.bundle]
name = "Bullet Hell"
identifier = "io.github.teenygame.examples.bullet-hell"
