[package]
name = "snake"
version = "0.1.0"
edition = "2021"

[dependencies]
teenygame = { path = "../.." }
rand = "0.8.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.84"
getrandom = { version = "*", features = ["js"] }

[package.metadata.bundle]
name = "Snake"
identifier = "io.github.teenygame.examples.snake"
